AUTOMAKE_OPTIONS = gnu

pkgdata_DATA = drpepper.raf \
               eftifont.raf \
               eftirobot.raf \
               fuzzy.raf \
               italic.raf \
               linux.raf \
               lockergnome.raf \
               madrid.raf \
               maxfour.raf \
               rectangles.raf \
               serifcap.raf \
               small.raf \
               stampatello.raf \
               thick.raf \
               thin.raf \
               tinker-toy.raf \
               tombstone.raf \
               verybig.raf \
               weird.raf

EXTRA_DIST = $(pkgdata_DATA)
